<resources>
    <string name="app_name">NEED</string>
    <string name="email">Email</string>
    <string name="pass">Mot de passe</string>
    <string name="creer">Créer un compte</string>
    <string name="oublie">Mot de passe oublié?</string>
    <string name="login">Connexion</string>
    <string name="nom">Nom</string>
    <string name="inscrire">S′inscrire</string>
    <string name="title_activity_maps">Map</string>
    <string name="num_ro">Numéro</string>
    <string name="adresse">Adresse</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="long_tude">Longétude</string>
    <string name="lattitude">Lattitude</string>
    <string name="num">Num:</string>
    <string name="lat">Lat:</string>

</resources>
