<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ballon"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-34dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ss"
        android:layout_alignParentBottom="true"
        android:paddingLeft="-8dp"
        android:layout_marginBottom="-20dp"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivLogo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="-5dp">


        <LinearLayout
            android:id="@+id/emailLay"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/PassLay"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/emailLay"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/Pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:hint="@string/pass"
                android:inputType="textPassword" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/PassLay"
            android:id="@+id/fPlay"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/oublie"
                android:gravity="end|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="16dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PassLay"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/custom_corner"
            android:textColor="@android:color/white"
            android:backgroundTint="#934cf4"
            />



        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fPlay"
            android:layout_marginRight="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="90dp"
            android:onClick="onClick"
            android:text="@string/creer"
            android:textAllCaps="false"
            android:background="@drawable/custom_corner"
            android:textColor="@android:color/white"
            android:backgroundTint="#4d1f8c"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="375dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="1dp">

            <ProgressBar
                android:id="@+id/ProgrsLogin"
                android:layout_width="50sp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="135dp"
                android:outlineAmbientShadowColor="@color/violet"
                android:outlineSpotShadowColor="@color/violet"
                android:visibility="invisible"
                />


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
